--- a/Makefile.cvslvk
+++ b/Makefile.cvslvk
@@ -101,15 +101,15 @@ override CL_OS := $(shell $(CL_HELPER) get_os)
 #     if possible)
 
 ifdef CL_COMP
-CL_COMP_TMP := $(CL_COMP)
+override CL_COMP_TMP := $(CL_COMP)
 else
-CL_COMP_TMP := any
+override CL_COMP_TMP := any
 endif
 
 ifdef CL_PARAM_COMP
-CL_COMP_PARAM_TMP := need
+override CL_COMP_PARAM_TMP := need
 else
-CL_COMP_PARAM_TMP := compute
+override CL_COMP_PARAM_TMP := compute
 endif
 
 # Don't do anythong more if we need only to show WI logic
@@ -126,12 +126,14 @@ else
 override CL_TMP := $(shell $(CL_HELPER) process_wi $(CL_COMP_PARAM_TMP) $(CL_COMP_TMP) $(CL_USE_MODULES))
 endif
 
-ifeq ($(filter gcc,$(CL_TMP)),gcc)
+ifeq ($(filter comp_param_needed comp_param_not_needed,$(CL_TMP)),comp_param_needed)
 override CL_PARAM_COMP := 1
+endif
+
+ifeq ($(filter gcc,$(CL_TMP)),gcc)
 override CL_COMP := gcc
 endif
 ifeq ($(filter suncc,$(CL_TMP)),suncc)
-override CL_PARAM_COMP := 1
 override CL_COMP := suncc
 endif
 ifeq ($(filter any,$(CL_TMP)),any)
@@ -139,7 +141,7 @@ ifndef CL_COMP
 CL_COMP = gcc
 endif
 endif
-override CL_WI_LIST := $(filter-out gcc suncc any,$(CL_TMP))
+override CL_WI_LIST := $(filter-out gcc suncc any comp_param_needed comp_param_not_needed,$(CL_TMP))
 
 
 # Set C and C++ compilers
