При сборке с CL_NDEBUG нужно добавлять в параметры сборки параметр ndebug вместо optimized или debug, иначе эта инсталляция становился недоступной

--- a/Makefile.cvslvk
+++ b/Makefile.cvslvk
@@ -229,7 +229,9 @@ endif
 ifdef CL_OPTIMIZE
 override CL_DIR_PARAMS := $(CL_DIR_PARAMS)-optimized
 else
-ifndef CL_NDEBUG
+ifdef CL_NDEBUG
+override CL_DIR_PARAMS := $(CL_DIR_PARAMS)-ndebug
+else
 override CL_DIR_PARAMS := $(CL_DIR_PARAMS)-debug
 endif
 endif
