СL_DFINES_*: при установке значений по умолчанию слкдует различать ситуации "не определено" и "определено в пустую строку"

--- a/Makefile.cvslvk
+++ b/Makefile.cvslvk
@@ -334,13 +334,22 @@ endif
 # $(CL_DEFINES_DEBUG_GCC)
 # $(CL_DEFINES_OPTIMIZE_GCC)
 # $(CL_DEFINES_DEBUG_SUNCC)
-# $(CL_DEFINES_OPTIMIZE_SUNGCC)
+# $(CL_DEFINES_OPTIMIZE_SUNCC)
 
-ifeq ($(CL_DEFINES_DEBUG)$(CL_DEFINES_DEBUG_GCC)$(CL_DEFINES_DEBUG_SUNCC),)
+# We use ifndef's here because "undefined" and "empty" are not the same here
+ifndef CL_DEFINES_DEBUG
+ifndef CL_DEFINES_DEBUG_GCC
+ifndef CL_DEFINES_DEBUG_SUNCC
 CL_DEFINES_DEBUG = -DDEBUG
 endif
-ifeq ($(CL_DEFINES_OPTIMIZE)$(CL_DEFINES_OPTIMIZE_GCC)$(CL_DEFINES_OPTIMIZE_SUNCC),)
+endif
+endif
+ifndef CL_DEFINES_OPTIMIZE
+ifndef CL_DEFINES_OPTIMIZE_GCC
+ifndef CL_DEFINES_OPTIMIZE_SUNCC
 CL_DEFINES_OPTIMIZE = -DNDEBUG
+endif
+endif
 endif
 
 ifdef CL_OPTIMIZE
