--- a/Makefile.cvslvk
+++ b/Makefile.cvslvk
@@ -17,76 +17,81 @@ ALWAYS = /file/that/never/exists
 
 $(ALWAYS):
 
-# INTERNAL_LIBRARY is a special case of LIBRARY, that is used by the current
-# module only. Static library will not be installed, and for shared library
-# CNAME will not be installed
-# We need to process it BEFORE command check
+
+# Check commands.
+# Commands are SUBDIRS, EXECUTABLE, LIBRARY, INTERNAL_LIBRARY
+# SUBDIRS may be defined either alone or with any other command
+# Other commands are not compatable
+
+override CL_NO_COMMAND_ERROR = $(shell $(CL_HELPER) error At least one of SUBDIRS, EXECUTABLE, LIBRARY or INTERNAL_LIBRARY should be defined)
+override CL_DUP_COMMAND_ERROR = $(shell $(CL_HELPER) error No more than one of EXECUTABLE, LIBRARY and INTERNAL_LIBRARY should be defined)
+override CL_TMP := $(if $(SUBDIRS)$(EXECUTABLE)$(LIBRARY)$(INTERNAL_LIBRARY),,$(CL_DUP_COMMAND_ERROR))
+override CL_TMP := $(if $(EXECUTABLE),$(if $(LIBRARY)$(INTERNAL_LIBRARY),$(CL_DUP_COMMAND_ERROR)))
+override CL_TMP := $(if $(LIBRARY),$(if $(EXECUTABLE)$(INTERNAL_LIBRARY),$(CL_DUP_COMMAND_ERROR)))
+override CL_TMP := $(if $(INTERNAL_LIBRARY),$(if $(EXECUTABLE)$(LIBRARY),$(CL_DUP_COMMAND_ERROR)))
 ifdef INTERNAL_LIBRARY
-ifdef LIBRARY
-override CL_TMP := $(shell $(CL_HELPER) error cvslvk: cannot process both LIBRARY and INTERNAL_LIBRARY in the same directory.)
-endif
-LIBRARY = $(INTERNAL_LIBRARY)
+override LIBRARY := INTERNAL_LIBRARY
 endif
 
+# CL_LOCALWORK is defined if we are goind to build anything in the current directory.
+# If not, we may omit most definitions
 
-# If no command is given, stop immidiatly
-ifeq ($(EXECUTABLE)$(LIBRARY)$(SUBDIRS),)
-override CL_TMP := $(shell $(CL_HELPER) error cvslvk: cannot determine mode. Please set EXECUTABLE, LIBRARY, INTERNAL_LIBRARY or SUBDIRS)
-endif
-
-# If both EXECUTABLE and LIBRARY are given, stop immidiatly
-ifneq ($(EXECUTABLE)$(LIBRARY),$(EXECUTABLE))
-ifneq ($(EXECUTABLE)$(LIBRARY),$(LIBRARY))
-override CL_TMP := $(shell $(CL_HELPER) error cvslvk: cannot process both EXECUTABLE and LIBRARY in the same directory.)
-endif
-endif
-
-
-# Are we going to do anything in the current directory ?
-# If no, then most of the settings may be omitted
 ifneq ($(EXECUTABLE)$(LIBRARY),)
 CL_LOCALWORK = 1
 endif
 
 
-# Variable check subsystem
-# Do this BEFORE the vars are used
+# System variables definitions should be expanded immidiately,
+# either user defines those or not
+# (The following lines are written because of their ':=' operator)
+# We can't set default values here: WIs' rules.cvslvk may use +=
 
+override CL_VARS := $(CL_VARS)
+override INCLUDES := $(INCLUDES)
+override DEFINES := $(DEFINES)
+override CL_GCC_DEBUG := $(CL_GCC_DEBUG)
+override CL_GCC_OPTIMIZE := $(CL_GCC_OPTIMIZE)
+override CL_SUNCC_DEBUG := $(CL_SUNCC_DEBUG)
+override CL_SUNCC_OPTIMIZE := $(CL_SUNCC_OPTIMIZE)
+override CL_DEFINES_DEBUG := $(CL_DEFINES_DEBUG)
+override CL_DEFINES_OPTIMIZE := $(CL_DEFINES_OPTIMIZE)
+override CL_DEFINES_DEBUG_GCC := $(CL_DEFINES_DEBUG_GCC)
+override CL_DEFINES_OPTIMIZE_GCC := $(CL_DEFINES_OPTIMIZE_GCC)
+override CL_DEFINES_DEBUG_SUNCC := $(CL_DEFINES_DEBUG_SUNCC)
+override CL_DEFINES_OPTIMIZE_SUNCC := $(CL_DEFINES_OPTIMIZE_SUNCC)
+override CL_CC_CFLAGS := $(CL_CC_CFLAGS) 
+override CL_CC_CXXFLAGS := $(CL_CC_CXXFLAGS)
+override CL_GCC_CFLAGS := $(CL_GCC_CFLAGS)
+override CL_GCC_CXXFLAGS := $(CL_GCC_CXXFLAGS)
+override CL_SUNCC_CFLAGS := $(CL_SUNCC_CFLAGS)
+override CL_SUNCC_CXXFLAGS := $(CL_SUNCC_CXXFLAGS)
+
+
+# Variable check subsystem
 # $(CL_VARS) lists variables to check.
 # Either just names or name:val1|...|valN
 
-# Check some system settings
-ifneq ($(CL_COMP),)
-override CL_VARS += CL_COMP:gcc|suncc
-endif
-ifneq ($(CL_LTYPE),)
-override CL_VARS += CL_LTYPE:shared|static
-endif
-ifneq ($(filter create_wi update_wi,$(MAKECMDGOALS)),)
-override CL_VARS += CL_MODULE
-endif
-ifneq ($(filter install,$(MAKECMDGOALS)),)
-override CL_VARS += CL_PREFIX
-endif
+# Check some system settings also
+override CL_VARS += $(if $(CL_COMP),CL_COMP:gcc|suncc)
+override CL_VARS += $(if $(CL_LTYPE),CL_LTYPE:shared|static)
+override CL_VARS += $(if $(filter create_wi update_wi,$(MAKECMDGOALS)),CL_MODULE)
+override CL_VARS += $(if $(filter install,$(MAKECMDGOALS)),CL_PREFIX)
 
 # The huge expression does the following:
 #   for each CL_VARS entry result is: var=value [value1 ... valueN] --
-override CL_CHECK_VARS_COMMAND = override CL_TMP := $(shell $(CL_HELPER) check_vars $(foreach d,$(CL_VARS),$(filter-out :%,$(subst :, :,$(d)))=$($(filter-out :%,$(subst :, :,$(d)))) $(subst |, ,$(filter-out $(filter-out :%,$(subst :, :,$(d))), $(subst :, ,$(d)))) --))
-# The actual check (kills make on errors)
-ifneq ($(CL_VARS),)
+# On error make is killed
+# On no error CL_VARS is cleared
+# If CL_VARS is empty, nothing is done
+override CL_CHECK_VARS_COMMAND = override CL_VARS := $(if $(CL_VARS),$(shell $(CL_HELPER) check_vars $(foreach d,$(CL_VARS),$(filter-out :%,$(subst :, :,$(d)))=$($(filter-out :%,$(subst :, :,$(d)))) $(subst |, ,$(filter-out $(filter-out :%,$(subst :, :,$(d))), $(subst :, ,$(d)))) --)))
+# The actual check
 $(CL_CHECK_VARS_COMMAND)
-endif
-
-# Now clean CL_VARS.
-# WI rules may add some additional vars to check.
-# Then they may define new CL_VARS that will be checked later.
+# WI rules may define new CL_VARS that will be checked later.
 # They even may cause immidiate ckeck via $(CL_CHECK_VARS_COMMAND)
-override CL_VARS :=
 
 
 # Architecture and OS are those we are using
 # These are detected automatically using 'uname', but since 'uname' output
-# is os- and architecture-dependent, we use a wrapper in $(CL_HELPER)
+# format is os- and architecture-dependent, we use a wrapper in $(CL_HELPER)
 # Currently supported: solaris and linux, on x86 and sparc
 
 override CL_ARCH := $(shell $(CL_HELPER) get_arch)
@@ -102,17 +107,8 @@ override CL_OS := $(shell $(CL_HELPER) get_os)
 #     "any" means that WI processing should choose (it will try to use gcc
 #     if possible)
 
-ifdef CL_COMP
-override CL_COMP_TMP := $(CL_COMP)
-else
-override CL_COMP_TMP := any
-endif
-
-ifdef CL_PARAM_COMP
-override CL_COMP_PARAM_TMP := need
-else
-override CL_COMP_PARAM_TMP := compute
-endif
+override CL_COMP_TMP := $(if $(CL_COMP),$(CL_COMP),any)
+override CL_COMP_PARAM_TMP := $(if $(CL_PARAM_COMP),need,compute)
 
 # Don't do anythong more if we need only to show WI logic
 # ('$(CL_HELPER) show_wi' will kill make)
@@ -123,64 +119,42 @@ endif
 # We want "make clean" and "make cleanall" to work even when WIs are not available
 # So we process this case separately.
 ifneq ($(filter clean cleanall,$(MAKECMDGOALS)),)
-override CL_TMP := $(shell $(CL_HELPER) process_wi in_clean $(CL_COMP_PARAM_TMP) $(CL_COMP_TMP) $(CL_USE_MODULES))
+override CL_RES := $(shell $(CL_HELPER) process_wi in_clean $(CL_COMP_PARAM_TMP) $(CL_COMP_TMP) $(CL_USE_MODULES))
 else
-override CL_TMP := $(shell $(CL_HELPER) process_wi $(CL_COMP_PARAM_TMP) $(CL_COMP_TMP) $(CL_USE_MODULES))
+override CL_RES := $(shell $(CL_HELPER) process_wi $(CL_COMP_PARAM_TMP) $(CL_COMP_TMP) $(CL_USE_MODULES))
 endif
 
-ifeq ($(filter comp_param_needed comp_param_not_needed,$(CL_TMP)),comp_param_needed)
+ifeq ($(filter comp_param_needed comp_param_not_needed,$(CL_RES)),comp_param_needed)
 override CL_PARAM_COMP := 1
 endif
 
-ifeq ($(filter gcc,$(CL_TMP)),gcc)
+ifeq ($(filter gcc,$(CL_RES)),gcc)
 override CL_COMP := gcc
 endif
-ifeq ($(filter suncc,$(CL_TMP)),suncc)
+ifeq ($(filter suncc,$(CL_RES)),suncc)
 override CL_COMP := suncc
 endif
-ifeq ($(filter any,$(CL_TMP)),any)
-ifndef CL_COMP
-CL_COMP = gcc
-endif
-endif
-override CL_WI_LIST := $(filter-out gcc suncc any comp_param_needed comp_param_not_needed,$(CL_TMP))
-
-
-# Set C and C++ compilers
-
-ifeq ($(CL_COMP),gcc)
-override CC = gcc
-override CXX = g++
-endif
-ifeq ($(CL_COMP),suncc)
-override CC = cc
-override CXX = CC
+ifeq ($(filter any,$(CL_RES)),any)
+override CL_COMP := $(if $(CL_COMP),$(CL_COMP),gcc)
 endif
 
+# Get the full WI list to use
 
-# Set linker. If all user sources are .c files, linker will default to $(CC)
-# Otherwise, it will default to $(CXX)
-
-override CL_TMP := $(filter-out %.c, $(SOURCES))
-ifeq ($(CL_TMP),)
-override LD := $(CC)
-else
-override LD := $(CXX)
-endif
+override CL_WI_LIST := $(filter-out gcc suncc any comp_param_needed comp_param_not_needed,$(CL_RES))
 
 
-# $(CL_LTYPE) defaults to 'shared' for gcc, 'static' for suncc
+# Set CL_BTYPE and CL_LTYPE to be available at WI's rules.cvslvk inclution
+# CL_BTYPE is one of 'debug','optimized','ndebug'
+#   'optimized' if CL_OPTIMIZED is defined to nonempty string,
+#   otherwise, 'ndebug' if CL_NDEBUG is defined to nonempty string,
+#   'debug by default
+# CL_LTYPE in one of 'shared' and 'static'
+#   Defautl is 'shared' for gcc, 'static' for suncc
 # Building shared libraries with suncc is not yet supported
 # (suncc seems to have problems with static constructors in shared libs)
 
-ifndef CL_LTYPE
-ifeq ($(CL_COMP),gcc)
-CL_LTYPE = shared
-endif
-ifeq ($(CL_COMP),suncc)
-CL_LTYPE = static
-endif
-endif
+override CL_BTYPE := $(if $(CL_OPTIMIZED),optimized,$(if $(CL_NDEBUG),ndebug,debug))
+override CL_LTYPE := $(if $(CL_LTYPE),$(CL_LTYPE),$(if $(filter gcc,$(CL_COMP)),shared,static))
 
 ifeq ($(CL_COMP)-$(CL_LTYPE),suncc-shared)
 override CL_TMP := $(shell $(CL_HELPER) error Building shared libraries with suncc is not yet supported)
@@ -188,12 +162,10 @@ endif
 
 
 # Build parameters.
-# All generated files will be placed into a subdir
 #
 # The combination of variables that are used to find out build parameters
 # is the following.
-# Always CL_ARCH, CL_OS are used, together with optimization and
-# debugging flags.
+# Always CL_ARCH, CL_OS and CL_BTYPE are used
 #
 # CL_COMP is used if CL_PARAM_COMP is defined, or if we are building
 # a c++ library, or if we use a module that has CL_COMP in params
@@ -206,58 +178,32 @@ endif
 
 override CL_DIR_PARAMS := $(CL_ARCH)-$(CL_OS)
 
-ifndef CL_PARAM_COMP
 ifdef LIBRARY
-ifeq ($(LD),$(CXX))
+ifeq ($(filter %.c,$(SOURCES)),)
 CL_PARAM_COMP = 1
 endif
 endif
-endif
-ifdef CL_PARAM_COMP
-override CL_DIR_PARAMS := $(CL_DIR_PARAMS)-$(CL_COMP)
-endif
 
-ifdef LIBRARY
-CL_PARAM_LTYPE = 1
-endif
-ifdef CL_PARAM_LTYPE
-override CL_DIR_PARAMS := $(CL_DIR_PARAMS)-$(CL_LTYPE)
-endif
+override CL_DIR_PARAMS := $(CL_DIR_PARAMS)$(if $(CL_PARAM_COMP),-$(CL_COMP))
+override CL_DIR_PARAMS := $(CL_DIR_PARAMS)$(if $(CL_PARAM_LTYPE)$(LIBRARY),-$(CL_LTYPE))
+override CL_DIR_PARAMS := $(CL_DIR_PARAMS)$(if $(CL_OTHERP),-$(CL_OTHERP))
+override CL_DIR_PARAMS := $(CL_DIR_PARAMS)-$(CL_BTYPE)
 
-ifdef CL_OTHERP
-override CL_DIR_PARAMS := $(CL_DIR_PARAMS)-$(CL_OTHERP)
-endif
-
-ifdef CL_OPTIMIZE
-override CL_DIR_PARAMS := $(CL_DIR_PARAMS)-optimized
-else
-ifdef CL_NDEBUG
-override CL_DIR_PARAMS := $(CL_DIR_PARAMS)-ndebug
-else
-override CL_DIR_PARAMS := $(CL_DIR_PARAMS)-debug
-endif
-endif
 
 # Now $(CL_DIR_PARAMS) is the parameter string
 
-# Since WI logic don't work on 'make clean' (because we want 'make clean' to
-# work even when there are WI errors), $(CL_BD) may be set incorrectly.
-# When CL_PARAM_COMP is not set, comp will be not in $(CL_BD), but it *may*
+# Since WI logic don't always work on 'make clean' (because we want 'make clean'
+# to work even when there are WI errors), $(CL_BD) may be set incorrectly.
+# When CL_PARAM_COMP is not set, comp may be not in $(CL_BD), but it *may*
 # be in the real build birectory name.
-# In this case we will rm -f all three options (without comp, with gcc and
-# with suncc. Hopefully this is correct.
 
-ifeq ($(MAKECMDGOALS),clean)
+ifneq ($(filter clean cleanall,$(MAKECMDGOALS)),)
 override CL_BD := $(shell $(CL_HELPER) get_bd_for_clean $(CL_DIR_PARAMS) $(CL_COMP))
-else
-ifeq ($(MAKECMDGOALS),cleanall)
-override CL_BD := NONE
 else
 override CL_BD := $(CL_DIR_PARAMS)
 ifdef CL_LOCALWORK
 # Create the build directory and remove symlinks to other BDs
-override CL_TMP := $(shell mkdir -p $(CL_BD); touch $(CL_BD)/CVSLVK_BUILD_DIR; $(CL_HELPER) remove_other_bd_links $(CL_BD))
-endif
+override CL_TMP := $(shell $(CL_HELPER) setup_bd $(CL_BD))
 endif
 endif
 
@@ -267,35 +213,35 @@ endif
 # in -I's only
 
 ifdef CL_LOCALWORK
-override INCLUDES += -I. -I$(CL_BD)
+override INCLUDES := -I. -I$(CL_BD) $(INCLUDES)
 endif
 
+# Now we are ready to include rules.cvslvk from WIs
+# CL_ARCH, CL_OS, CL_COMP, CL_LTYPE, CL_BTYPE are set
+# CL_BD is set and build directory is created if we are not in clean{all}
 
-# Include rules.cvslvk for used working installations
-# $(CL_COMP), $(CL_LTYPE), $(CL_BD) are already computed, so may be used but not
-#  changed. That means that no build parameters may come from WIs
-
+ifdef CL_LOCALWORK
 include $(CL_DIR)/rules.cvslvk
-
-
-# Check WI variables if required
-
-ifneq ($(CL_VARS),)
-$(CL_CHECK_VARS_COMMAND)
 endif
+
+
+# Set C and C++ compilers and linker
+# Linker defaults to C compiler if all $(SOURCES) are .c files, and to
+# C++ compiler otherwise
+
+override CC := $(if $(filter gcc,$(CL_COMP)),gcc,cc)
+override CXX := $(if $(filter gcc,$(CL_COMP)),g++,CC)
+override LD := $(if $(filter-out %.c, $(SOURCES)),$(CXX),$(CC))
+
 
 # Compiler flags for debugging and optimizing
-# By default, everything is built with debug information
-# If CL_NDEBUG is set, everything will be built with no debug information
-# If CL_OPTIMIZE is set, everything will be built with optimizations AND
-# without debug information (optimization + gebug information is useless)
 # For debugging with gcc, $(CL_GCC_DEBUG) is used, defaults to -g
 # For debugging with suncc, $(CL_SUNCC_DEBUG) is used, defaults to -g
 # For optimizing with gcc, $(CL_GCC_OPTIMIZE) is used, defaults to -O2
 # For optimizing with suncc, $(CL_SUNCC_OPTIMIZE) is used, defaults to -O
 
-override CFLAGS = -c
-override CXXFLAGS = -c
+override CFLAGS := -c
+override CXXFLAGS := -c
 
 # Handle sun CC's templates database
 ifeq ($(CL_COMP),suncc)
@@ -305,42 +251,19 @@ override LDFLAGS += -ptr$(CL_BD)
 endif
 endif
 
-ifndef CL_GCC_DEBUG
-CL_GCC_DEBUG = -g
-endif
-ifndef CL_SUNCC_DEBUG
-CL_SUNCC_DEBUG = -g
+
+ifeq ($(CL_BTYPE),debug)
+CL_GCC_DEBUG ?= -g
+CL_SUNCC_DEBUG ?= -g
+override CFLAGS += $(CL_$(CL_COMP)_DEBUG)
+override CXXFLAGS += $(CL_$(CL_COMP)_DEBUG)
 endif
 
-ifndef CL_NDEBUG
-ifndef CL_OPTIMIZE
-ifeq ($(CL_COMP),gcc)
-override CFLAGS += $(CL_GCC_DEBUG)
-override CXXFLAGS += $(CL_GCC_DEBUG)
-endif
-ifeq ($(CL_COMP),suncc)
-override CFLAGS += $(CL_SUNCC_DEBUG)
-override CXXFLAGS += $(CL_SUNCC_DEBUG)
-endif
-endif
-endif
-
-ifndef CL_GCC_OPTIMIZE
-CL_GCC_OPTIMIZE = -O2
-endif
-ifndef CL_SUNCC_OPTIMIZE
-CL_SUNCC_OPTIMIZE = -O
-endif
-
-ifdef CL_OPTIMIZE
-ifeq ($(CL_COMP),gcc)
-override CFLAGS += $(CL_GCC_OPTIMIZE)
-override CXXFLAGS += $(CL_GCC_OPTIMIZE)
-endif
-ifeq ($(CL_COMP),suncc)
-override CFLAGS += $(CL_SUNCC_OPTIMIZE)
-override CXXFLAGS += $(CL_SUNCC_OPTIMIZE)
-endif
+ifeq ($(CL_BTYPE),optimized)
+CL_GCC_OPTIMIZE ?= -O2
+CL_SUNCC_OPTIMIZE ?= -O
+override CFLAGS += $(CL_$(CL_COMP)_OPTIMIZE)
+override CXXFLAGS += $(CL_$(CL_COMP)_OPTIMIZE)
 endif
 
 # Additional defines for debugging and optimizing
@@ -367,28 +290,11 @@ endif
 endif
 endif
 
-ifdef CL_OPTIMIZE
-
-override DEFINES += $(CL_DEFINES_OPTIMIZE)
-ifeq ($(CL_COMP),gcc)
-override DEFINES += $(CL_DEFINES_OPTIMIZE_GCC)
+ifeq ($(CL_BTYPE),optimized)
+override DEFINES += $(CL_DEFINES_OPTIMIZE)$(CL_DEFINES_OPTIMIZE_$(CL_COMP))
 endif
-ifeq ($(CL_COMP),suncc)
-override DEFINES += $(CL_DEFINES_OPTIMIZE_SUNCC)
-endif
-
-else
-ifndef CL_NDEBUG
-
-override DEFINES += $(CL_DEFINES_DEBUG)
-ifeq ($(CL_COMP),gcc)
-override DEFINES += $(CL_DEFINES_DEBUG_GCC)
-endif
-ifeq ($(CL_COMP),suncc)
-override DEFINES += $(CL_DEFINES_DEBUG_SUNCC)
-endif
-
-endif
+ifeq ($(CL_BTYPE),debug)
+override DEFINES += $(CL_DEFINES_OPTIMIZE)$(CL_DEFINES_DEBUG_$(CL_COMP))
 endif
 
 
@@ -400,18 +306,8 @@ endif
 # $(CL_SUNCC_CFLAGS) for cc
 # $(CL_SUNCC_CXXFLAGS) for CC
 
-override CFLAGS += $(CL_CC_CFLAGS)
-override CXXFLAGS += $(CL_CC_CXXFLAGS)
-
-ifeq ($(CL_COMP),gcc)
-override CFLAGS += $(CL_GCC_CFLAGS)
-override CXXFLAGS += $(CL_GCC_CXXFLAGS)
-endif
-
-ifeq ($(CL_COMP),suncc)
-override CFLAGS += $(CL_SUNCC_CFLAGS)
-override CXXFLAGS += $(CL_SUNCC_CXXFLAGS)
-endif
+override CFLAGS += $(CL_CC_CFLAGS)$(CL_$(CL_COMP)_CFLAGS)
+override CXXFLAGS += $(CL_CC_CXXFLAGS)$(CL_$(CL_COMP)_CXXFLAGS)
 
 
 # Library building tools
